my_k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  # Template used by every Pod for this deployment.
  template:
    metadata:
      labels:
        component: postgres
    spec:
      # Allocates storage
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
              claimName: database-persistent-volume-claim
      containers:
      - name: postgres
        image: postgres
        ports:
        - containerPort: 5432
        volumeMounts:
          # Must match the volumes: name.  Go find a piece of storage
          # we just asked k8s for.
          - name: postgres-storage
            mountPath: /var/lib/postgresql/data
            subPath: postgres
