my_k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
# spec customizes how the deployment will behave
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server
  template:
    metadata:
    # Must match up with whatever we put inside the spec for the deployment itself.
      labels:
        component: server
    spec:
      containers:
      - name: server
      # Need to add env variables to tell express api how to connect
      # to postgres and redis
        image: orange29/multi-server
        ports:
        - containerPort: 5000
