my_k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    # Tell k8s that we wish to create an ingress controller based on the nginx project
    kubernetes.io/ingress.class: nginx
    # Configure how our copy of nginx behaves.  If we match /api, then remove
    # /api before sending to the server. 
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  # Rules say there are two possible paths we can match traffic to.
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
